setup easyweb connetion

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,13 @@
 {
   "DataOptions": {
-    "UnionId": XXXX
+    "UnionId": 4902
   },
 
   "ApiSettings": {
     "Authority": "https://app.easyweb.se",
-    "ClientId": "OAuth2.xxxx.xxxx",
-    "ClientSecret": "xxxxxxxx-xxxx-xxxx-xxx",
-    "EndpointRoot": "/extapi/xxxx"
+    "ClientId": "OAuth2.u4902.h2759",
+    "ClientSecret": "6c78c2b8-6c10-437d-aec",
+    "EndpointRoot": "/extapi/4902"
   },
 
   "SiteOptions": {
