--- a/ThreeGuysBrewing.csproj
+++ b/ThreeGuysBrewing.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Easyweb.Site.Infrastructure" Version="8.6.1" />
     <PackageReference Include="Easyweb.Site.RuntimeCompilation" Version="8.0.0" />
     <PackageReference Include="Easyweb.Site.ThumbnailGeneration" Version="8.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <PropertyGroup>
